--- a/app/views/attempts/_attempt_form.html.erb
+++ b/app/views/attempts/_attempt_form.html.erb
@@ -4,20 +4,20 @@
 	<% end %>
 	<fieldset>
 		<% if @feat.timed %>
-			<%= text_field_tag "hours", params[:hours], maxlength: "2", 
+			<%= text_field_tag "hours", params[ :hours ], maxlength: "2", 
 				class: "field span1"%>
 			<%= f.label :hours, style: "display:inline;"%>
 			<br>
-			<%= text_field_tag "minutes", params[:minutes], maxlength: "2", 
+			<%= text_field_tag "minutes", params[ :minutes ], maxlength: "2", 
 				class: "field span1"%>
 			<%= f.label "Mins.", style: "display:inline;"%>
 			<br>
-			<%= text_field_tag "seconds", params[:seconds], maxlength: "4", 
+			<%= text_field_tag "seconds", params[ :seconds ], maxlength: "4", 
 				class: "field span1"%>
 			<%= f.label "Secs.", style: "display:inline;"%>
 		<% else %>
 			<%= f.label :score %>
-			<%= text_field_tag :score, params[:score] %>
+			<%= f.text_field :score %>
 		<% end %>
 		<br>
 		<br>
@@ -29,7 +29,8 @@
 		<%= f.file_field :image, accept: "image/*" %>
 		<br>
 		<br>
-		<%= f.label "Video URL"%>
+		<%= f.label :video_url, "Youtube video URL" %>
+		<%= f.text_field :video_url %>
 		<%= f.submit "Record Attempt", 
         class: "btn btn-small btn-primary" %>		            
 	</fieldset>
