--- a/app/views/attempts/edit.html.erb
+++ b/app/views/attempts/edit.html.erb
@@ -8,7 +8,7 @@
     			<%= render 'layouts/feat_info' %>
 			  </div>
    			<div class="craig-unit">
-				  <h2><strong>Update your attempt.</strong></h2>
+				  <h2><strong>Update Your Attempt</strong></h2>
 					<div class="hr1"></div>
 					<%= render 'attempt_form' %>
   			</div>
