--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -10,9 +10,14 @@
 				  <%= render 'layouts/attempt_info' %>
 				  <br>
 				  <% if @attempt.user.id == session[:user_id] %>
-            <h2><%= link_to "Delete Attempt", attempt_path( @attempt ), confirm: 'Delete this attempt?', method: 'delete' %></h2>
-				  <% elsif @attempt.validations.where(user_id: session[:user_id]).first.nil? %>
-  		      <h2><%= link_to "Validate this attempt", new_validation_path %></h2>
+            <h2>
+							<%= link_to "Delete Attempt", attempt_path( @attempt ), 
+								confirm: 'Delete this attempt?', method: 'delete' %>
+						</h2>
+				  <% elsif @validations.where( user_id: session[ :user_id ]).first.nil? %>
+  		      <h2>
+							<%= link_to "Validate or rebut", new_validation_path %> this attempt.
+						</h2>
 					<% end %>
 		  	</div>
 			</div>
