--- a/app/views/feats/search.html.erb
+++ b/app/views/feats/search.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/map_script', {obj_list: @feats} %>
+<%= render 'shared/map_script', { obj_list: @feats } %>
 <div class="background-unit">
   <div class="container">
 		<div class="row-fluid">
@@ -6,11 +6,13 @@
 				<div class="craig-unit">
           <%= form_tag search_feats_path, method: 'get' do %>
             <fieldset>
-        			<h2><strong>Search for feats within &nbsp;
-							<%= text_field_tag :distance, params[:distance], class: "span3" %> &nbsp;
-	    				miles of</strong></h2>
-						
-           		<%= text_field_tag :address, params[:address], maxlength: 255, class: "span12" %>
+        			<h2>
+								<strong>Search for feats within &nbsp;
+								<%= text_field_tag :distance, params[:distance], class: "span3", placeholder: '1.5' %>
+							 	&nbsp; miles of</strong>
+							</h2>
+           		<%= text_field_tag :address, params[:address], maxlength: 255, class: "span12", 
+ 								placeholder: 'Address'%>
 							<br>
            		<%= submit_tag 'Search', name: nil, 
 								class: "btn btn-small btn-primary" %>
@@ -22,7 +24,13 @@
 					  <h2><strong>Feats in this area.</strong></h2>
 						<div class="hr1"></div>
 	        	<% @feats.each do |f| %>
-							<h2><%= link_to "#{f.name}", feat_path(f.id) %></h2>
+							<h2>
+								<%= link_to "#{f.name}", feat_path( f.id ) %> @ 
+								<%= link_to "#{f.location.name}", location_path( f.location.id )%>
+							</h2>
+							<% if f != @feats.last %>
+								<div class="hr2"></div>
+							<% end %>
 		    		<% end %>
 					</div>
 	    	<% end %>
