--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,30 +6,45 @@
 		      <%= image_tag@user.image %> <%= @user.name %>
 			    <br>
 					<br>
-	        <h2><strong>Username:</strong> <%= @user.username %></h2>
-		      <h2>
+	        <h2>
+						<strong>Username:</strong> <%= @user.username %>
+					</h2>
+					<h2>
+						<strong>Location:</strong> <%= @user.location %>
+					</h2>
+					<h2>
+						<strong>Bio:</strong>
+						<% if @user.bio.blank? %>
+						 &lt;none&gt;
+						<% else %>
+							<br><%= @user.bio %>
+						<% end %>
+					</h2>
+					<h2>
 					  <% if @feat_count == 0 %>
-			      0 Feats Created
+			      	0 Feats Created
 			      <% elsif @feat_count == 1 %>
-	    	    <%= link_to "#{@feat_count} Feat Created", feats_path( user_id: params[:id] ) %>
+	    	    	<%= link_to "#{@feat_count} Feat Created", feats_path( user_id: params[:id] ) %>
 			      <% else %>
-			      <%= link_to "#{@feat_count} Feats Created", feats_path( user_id: params[:id] ) %>
-			    <% end %>
-			    <br>
-			    <% if @attempt_count == 0 %>
-			      0 Feats Attempted
+			      	<%= link_to "#{@feat_count} Feats Created", feats_path( user_id: params[:id] ) %>
+			    	<% end %>
+						<br>
+			    	<% if @attempt_count == 0 %>
+			      	0 Feats Attempted
 			      <% elsif @attempt_count == 1 %>
-			      <%= link_to "#{@attempt_count} Feat Attempted",
-			      attempts_path( user_id: params[:id] ) %>
+			      	<%= link_to "#{@attempt_count} Feat Attempted",
+			      		attempts_path( user_id: params[:id] ) %>
 			      <% else %>
 			      <%= link_to "#{@attempt_count} Feats Attempted",
-			      attempts_path( user_id: params[:id] ) %>
-			    <% end %>
+			      	attempts_path( user_id: params[:id] ) %>
+			    	<% end %>
 					</h2>
-					<br>
-			    <% if params[:id].eql?(session[:user_id].to_s ) %>
-			      <h2><%= link_to "Edit Profile", edit_user_path( session[:user_id] ) %></h2>
-			    <% end %>
+					<h2>
+						<br>
+			    	<% if params[:id].eql?(session[:user_id].to_s ) %>
+			      	<%= link_to "Edit Profile", edit_user_path( session[:user_id] ) %>
+			    	<% end %>
+					</h2>
 		    </div>
       </div>
     </div>
