--- a/app/views/static_pages/how_it_works.html.erb
+++ b/app/views/static_pages/how_it_works.html.erb
@@ -5,67 +5,72 @@
         <div class="row-fluid">
           <div class="span12">
             <div class="statictop-well">
-               <center><h1>The easiest, most fun way to compete with<br> your friends when you are and aren't together.</h1></center>
+               <center><h2>A fun and easy way to compete with your friends when you are and aren't together.</h2></center>
             </div>
             <div class="staticbottom-well">
-              <h1>AN INTERACTIVE RECORD BOARD</h1>
-<h2>FeatsWithFriends is an interactive record board that allows you to create and compete over location based challenges in your city and around the world.<br>
-<br>At the heart of Feats With Friends are location based challenges called Feats.  Feats can be created by anybody, but must take place at a physical location and be measurable by time (shortest or longest amount of time) or score (lowest or highest score).<br>
+              <h3><strong>AN INTERACTIVE RECORD BOARD</strong></h3>
+<h2>Feats With Friends is an interactive record board that allows you to create and compete over location based challenges called feats in your city and around the world.<br>
+<br>Feats can be created by anybody, but must take place at a physical location.  Feats must be measureable by time (shortest or longest amount of time) or score (lowest or highest score).<br>
 <br>
-- The fastest time running across the Key Bridge.<br>
-- The longest time holding you breath in the Lincoln Memorial Reflecting Pool.<br>  
-- The most push ups on the White House lawn.<br>  
-- The lowest golf score on hole nine at the Burke Lake golf course.<br>
+Here are a few examples:<br>
 <br>
-Once a Feat is created, others can go the location where the feat took place, and attempt it. Once more than person records a Feat attempt, the competition begins as one or more persons battle over their respective postion on the record board. <a href="#">See it in action.</a></h2> 
+&middot; The fastest time running across the Key Bridge.<br>
+&middot; The longest time holding you breath in the Lincoln Memorial Reflecting Pool.<br>  
+&middot; The most push ups on the White House lawn.<br>  
+&middot; The lowest golf score on hole nine at the Burke Lake golf course.<br>
+<br>
+Once a Feat is created, other users can go to the location where the feat took place to attempt it. Once more than person records a Feat attempt, the competition for top position on the record board begins.</h2> 
 <div class="hr1"></div>
 
-<h1>CREATING A FEAT</h1>
+<h3><strong>CREATING A FEAT</strong></h3>
 <h2>In order to create a Feat, you must first locate where the Feat took place on our map by searching for it's name and/or address.<br>
 <br>
 For example, let's say you want to create a Feat for the fastest time to eat a burger at Big Buns located in Arlington, VA.  Search Big Buns, Arlington, VA.  If no results are found, enter Big Buns' address, 4401 Wilson Blvd. Arlington, VA.<br>
 <br>
-Occasionally there will be complications regarding our mapping system.<br>
-<br>
-For example, let's say you want to create a FEAT for the fastest person to swim accross the Potamac River from the DC to Virginia side, Google Maps will locate another part of the Potomac River.  The best way to address this problem is to create the Feat using the starting location, for example, Jack's Boathouse on the Georgetown Waterfront.<br>
+Occasionally there will be complications regarding our mapping system. For example, let's say you want to create a FEAT for the fastest person to swim across the Potomac River from the DC to Virginia side, Google Maps will locate another part of the Potomac River.  The best way to address this problem is to create the Feat using the starting location, for example, Jack's Boathouse on the Georgetown Waterfront.<br>
 <br>
 We are constantly working to create a better, more user friendly mapping experience.  If you have any ideas please email us at <a href="#">feedback@featswithfriends.com</a></h2>
 <div class="hr1"></div>
 
-<h1>DESCRIBING A FEAT</h1>
-<h2>After entering the Feat location, provide a name and description of the Feat. Please be as detailed as possible in your Feat description.<br>
+<h3><strong>NAMING A FEAT AND ADDING A DESCRIPTION AND/OR RULES</strong></h3>
+<h2>After entering the feat location, name the feat and add a description and/or rules. Please be as detailed as possible so other people understand exactly what they have to do when they attempt your feat.<br>
 <br>
-For example, let's say I am creating a Feat for the fastest time running across the Brooklyn Bridge. You would want to clearly describe where both the starting and finish line are located. Below is an example.<br>
+For example, let's say I am creating a feat for the fastest time running across the Brooklyn Bridge. You would want to clearly describe where both the starting and finish line are located. Below is an example.<br>
 <br>
 FEAT: The fastest time running across the Brooklyn Bridge.<br>
 <br>
-FEAT DESCRIPTION: The starting line is located on the Brooklyn side of the bridge where it says "Welcome to Brooklyn" on the concrete. The finish line is located where the wooden plank section of the bridge ends.<br>
+FEAT DESCRIPTION: The starting line is located on the Brooklyn side of the bridge where it says, "Welcome to Brooklyn" on the concrete. The finish line is located where the wooden plank section of the bridge ends.<br>
 <br>  
 We will be adding the ability to upload photos to the Feat description soon in order to help you better describe the Feat to other people.<br>
 <br>
-Lastly, indicate how the Feat is measured, by time (lowest or highest) or score (lowest or highest).</h2>
+Lastly, indicate how the feat is measured, by time (shortest or longest amount of time) or score (lowest or highest score).</h2>
 <div class="hr1"></div>
 
 
-<h1>RECORDING A FEAT ATTEMPT</h1>
+<h3><strong>RECORDING A FEAT ATTEMPT</strong></h3>
 <h2>After attempting a Feat, simply submit the result and either upload a picture or YouTube video link of you attempting the feat.</h2>
 <div class="hr1"></div>
 
 
-<h1>VALIDATING A FEAT ATTEMPT</h1>
-<h2>After recording a Feat attempt, another person who witnessed the effort must validate it by simply signing in to their Feats With Friends account, locate your Feat attempt, and click "validate this Feat."<br>
+<h3><strong>VALIDATING A FEAT ATTEMPT</strong></h3>
+<h2>After recording a Feat attempt, another person who witnessed the effort must sign in to their Feats With Friends account to locate your feat attempt and click "Validate Feat."<br>
 <br> 
-There are three preferred ways to validate a Feat attempt:<br>
+There are three preferred ways to validate a feat attempt:<br>
 <br> 
-(1) Record your attempt, upload a picture of you attempting the Feat, and have an eyewitness validate the Feat.<br>
-(2) Record your attempt, upload a YouTube video link of you attempting the Feat, and have an eyewitness validate the Feat.<br>
-(3) Upload a YouTube video link of you completing the entire Feat from start to finish.<br>
+(1) Record your attempt, upload a picture of you attempting the feat, and have an eyewitness validate the feat.<br>
+(2) Record your attempt, upload a YouTube video link of you attempting the feat, and have an eyewitness validate the feat.<br>
+(3) Upload a YouTube video link of you completing the entire feat from start to finish.<br>
 <br>
-Non-validated Feat attempts may be recorded, however your friends and other users may be suspicious of your attempt.</h2>
+Non-validated feat attempts may be recorded, however your friends and other users may be suspicious of your attempt and "rebut" it.</h2>
 <div class="hr1"></div>
 
-<h1>FRIENDLY COMPETITION IS INGRAINED IN EVERYTHING WE DO</h1>
-<h2>We built Feats With Friends to solve a real problem: having to physically be with other people in order to compete with them.  While this remains the case for several sports and activities that arent possible with just one person, it doesn't have to be the case for everything else.<br>
+<h3><strong>REBUTTING A FEAT ATTEMPT</strong></h3>
+<h2>If a person adds a feat attempt without proper validation, other users have the ability to add a "Rebuttal" to the feat.  A rebuttal is a challenge that the result is erroneous based on a lack of proper evidence to support the feat attempt.  It is likely that in the future a feat with several rebuttals will be flagged or displayed at the bottom of the leader board with an asterisk.</h2>
+
+<div class="hr1"></div>
+
+<h3><strong>FRIENDLY COMPETITION IS INGRAINED IN EVERYTHING WE DO</strong></h3>
+<h2>Believe it or not, we built Feats With Friends to solve a real problem: having to physically be with other people in order to compete against them.  While this remains the case for several sports and activities that aren't possible with just one person, it doesn't have to be the case for everything else.<br>
 <br>
 We also believe that while competing with strangers is fun, competing with friends drives us even more. We will keep this in mind as we continue to develop Feats With Friends.</h2> 
 
