--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,8 +28,8 @@
   box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);  	
 }
 
-.statictop-well h1 {
-  font-size: 35px;
+.statictop-well h2 {
+  font-size: 30px;
   line-height: 1.2;
   color: #333;
   font-weight: 200;
@@ -80,18 +80,18 @@
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px 0px 1px 1px rgba(0, 0, 0, 0.05);
 }
 
-.staticbottom-well h1 {
-  font-size: 18px;
-  line-height: 1.3;
-  color: #333;
-  font-weight: 500;
-}
-
 .staticbottom-well h2 {
   font-size: 15px;
   line-height: 1.3;
   color: #333;
-  font-weight: 400;
+  font-weight: 300;
+}
+
+.staticbottom-well h3 {
+  font-size: 14px;
+  line-height: 1.3;
+  color: #333;
+  font-weight: 200;
 }
 
 .pull-right {
@@ -380,6 +380,14 @@
 	width: 100%;
 }
 
+.hr3 {
+  margin: 12px 0px 12px 0px;
+  border: 0;
+  border: 1px dashed #D7D7D7;
+  border-bottom: 1px dashed #ffffff;
+	width: 100%;
+}
+
 .btn-small {
   margin-top: 3px;
   margin-bottom: -8px;
@@ -436,7 +444,7 @@
 }
 
 a {
-  color: #0066ff;
+  color: #0066FF;
   text-decoration: none;
 }
 
