--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -3,36 +3,41 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
-		  	The following feats exist at:
-				<br>
-				<br>
-				<%= @location.name %>
-				<br>
-				<%= @location.address %>
-			</div>
-	  </div>
-    <br>
-	  <div class="row-fluid">
-      <div class="span4">
-		  	<div class="craig-unit">
-					<% unless @feats.empty? %>
-						<% @feats.each do |f| %>
-							<h2><%= link_to f.name, feat_path( f.id ) %></h2>
-							<% if f != @feats.last %>
-								<div class="hr2"></div>
-							<% end %>
-						<% end %>
-					<% else %>
-						<h2>There are no feats at this location.  
-							<%= link_to "Create one", new_feat_path %>?</h2>
-					<% end %>
-		  	</div>
-	    </div>
-      <div class="span8">
-	      <div class="map-well"> 
-	        <div id="map_canvas"></div>
+			  <div class="craig-unit">
+				  <h2>
+				    <i class="icon-map-marker"></i>
+				    <strong><%= @location.name %></strong>
+				    <br>
+				    <%= @location.address %>
+					</h2>
+				  <div class="hr1"></div>
+					<div class="row-fluid">
+					  <div class="span7">
+						  <h2>
+							  Existing Feats<br>
+								<div class="hr3"></div>
+					      <% unless @feats.empty? %>
+						      <% @feats.each do |f| %>
+							      <%= link_to f.name, feat_path( f.id ) %>
+							        <% if f != @feats.last %><br>
+											<br>
+							      <% end %>
+						      <% end %>
+					      <% else %>
+						      There are no feats at this location.  
+							    <%= link_to "Create one", new_feat_path %>?</h2>
+					      <% end %>
+							</h2>
+		  	    </div>
+			      <div class="span5">
+						<br>
+	            <div id="map_canvas"></div>
+							<br>
+							<br>
+	          </div>
+	        </div>
         </div>
-	    </div>
-	  </div>
+      </div>
+    </div>
   </div>
 </div>
