--- a/app/views/static_pages/privacy_policy.html.erb
+++ b/app/views/static_pages/privacy_policy.html.erb
@@ -1,96 +1,70 @@
 <%- content_for( :title_description ) { "Privacy Policy" } -%>
 
- <div class="background-unit">
-      <div class="container">
-        <div class="row-fluid">
-          <div class="span12">
-            <div class="statictop-well">
-              <h1>Privacy Policy</h1>
-            </div>
-            <div class="staticbottom-well">
-              <h2><strong>USER CONTENT</strong><br>
-              <br>
-FeatsWithFriends is owned and operated by Ignition Pad, LLC. (“FeatsWithFriends” “WE,” “US,” OR “OUR”) is committed to protecting your privacy.  Please read the following to learn what information we collect from you and how we use that information.  By accessing or using FeatsWithFriends.com, you acknowledge that you have read, understand, and agree to the terms set forth in this Privacy Policy and in FeatsWithFriends Terms of Use.  If you do not agree to these terms, exit this page and do not access or use FeatsWithFriends.com.<br>
-<br>
-<br>
-
-
-<strong>AGES</strong><br>
-<br>
-You must be 13 years of age or older to use FeatsWithFriends.  If we obtain actual knowledge that a user is under 13, we will take steps to remove that user’s personal information from our database.  By using FeatsWithFriends, you are representing that you are at least 18 years old, or that you are at least 13 years old and have a parent’s or guardian’s permission to use FeatsWithFriends.<br>
-<br>
-<br>
-
-
-<strong>INFORMATION COLLECTED BY FEATSWITHFRIENDS</strong><br>
-<br>
-Personally Identifiable Information is information that identifies a specific user.  When you engage is certain activities on FeatsWithFriends, such as creating an account or registering with us, we may ask you for certain information, including, but not limited to your name, email address, phone number, date of birth and sex.  If you don’t provide the mandatory information requested by FeatsWithFriends to create a User Account, you will not be able to use FeatsWithFriends.<br>
-<br> 
-
-Non-Personally Identifiable Information is information that does not identify a specific user.  This type of information may include thinks like the Uniform Resource Locator (“URL”) of the website you visited before coming to our site, the URL you visit after leaving our site, the type of web browser you are using when you access our site and your Internet Protocol (“IP”) address.  We and/or Third Party Service Providers may automatically collect this information when you visit our site through electronic tools including, but not limited to Cookies.<br>
-<br>
-
-Information provided by social network platforms.  If you access our site through a social network platform, including, but not limited to Facebook.  We will collect and store the information explicitly allowed by the respective social network’s Terms of Service.<br>
-<br>
-
-
-FeatsWithFriends is committed to your privacy and will not sell your name, address, phone number and/or email address with Third Party Service Providers.  However, in order to improve our services and the services provided from our Business Partners, FeatsWithFriends, at its discretion, may share your Personally Identifiable Information with our Partner Businesses including your email address, age, sex and/or zip code.<br>
-<br>    
-
-FeatsWithFriends may share your information with select Authorized Third Party Service Providers.  Third Party Service Providers may be used to fulfill orders, deliver emails, administer contests or sweepstakes, remove repetitive information on customer lists, analyze data, provide marketing assistance, provide search results and links, process credit card payments, operate the Website, troubleshoot, and provide customer service.  We encourage Third Party Service Providers to adopt and post privacy policies. However, the use of your Personally Identifiable Information by such parties is governed by the privacy policies of such parties and is not subject to our control.<br>
-<br>
-
-We may share your information in a Business Transfer. As with any other business, we could merge with, or be acquired by another company. If this occurs, the successor company would acquire the information we maintain, including Personally Identifiable Information.<br>
-<br> 
-
-We may share your information for our Protection and the Protection of Others. We reserve the right to disclose your personally identifiable information as required by law and when we believe that disclosure is necessary to protect our rights and/or comply with a judicial proceeding, court order, or legal process served on our Website; enforce or apply this Privacy Policy, our Website Terms of Use or other agreements; or protect the rights, property or safety of the Website, its Users or others.<br>
-<br>
-<br>
-
-
-<strong>YOUR CHOICES REGARDING YOUR PERSONAL INFORMATION</strong><br>
-<br>
-You have a right at any time to stop receiving promotional communications from us.  You may indicate a preference regarding receiving promotional communications from us and will have the opportunity to "opt-out" by following the unsubscribe instructions provided in the promotional e-mail you receive or by contacting us directly at hello@featswithfriends.com.<br>
-<br>
-
-Despite your indicated promotional communications preferences, FeatsWithFriends may send you administrative emails regarding FeatsWithFriends, including, for example, administrative and transactional confirmations, and notices of updates to our Privacy Policy if we choose to provide such notices to you in this manner.<br>
-<br>
-
-You may close your account with FeatsWithFriends at any time.<br>
-<br>
-<br>
-
-
-<strong>THIRD PARTY WEBSITES AND LINKS</strong><br>
-<br>
-FeatsWithFriends may contain links to other third party websites.  We are not responsible for the privacy practices or the content of such websites. The ability to access information of third-parties from FeatsWithFriends, or links to other websites or locations, is for your convenience and does not signify our endorsement of such third-parties, their products, their services, other websites, locations or their content.<br>
-<br>
-<br>
-
-
-<strong>SECURITY</strong><br>
-<br>
-FeatsWithFriends uses several industry standard technologies to protect personal information entered in FeatsWithFriends.com.  Even though we have taken several steps to protect your personal information, FeatsWithFriends cannot fully eliminate security risks associated with personal information and cannot guarantee the complete protection of your account from unauthorized access. <br>
-<br>
-<br>
-
-
-<strong>FEEDBACK</strong><br>
-<br>
-Feedback submitted to FeatsWithFriends becomes the property of FeatsWithFriends.  We will treat the personal information contained in such feedback in accordance with this Privacy Policy. FeatsWithFriends may use your feedback for marketing purposes or to modify our services at anytime without compensating you. FeatsWithFriends may share your feedback pertaining to our Business Partners to improve their services and/or promotions offered through FeatsWithFriends at any time without compensating you. <br>
-<br>   
-
-
-FeatsWithFriends may revise this Privacy Policy at any time.  If we make any substantial changes we will post an alert on this page. If you object to these changes, you must stop using FeatsWithFriends.  Continued use of FeatsWithFriends following the notice of any changes shall indicate your acknowledgement and acceptance of the changes.
-
-</h2>
-
-
-            </div>
-          </div>
+<div class="background-unit">
+  <div class="container">
+    <div class="row-fluid">
+      <div class="span12">
+        <div class="statictop-well">
+          <h2>Privacy Policy</h2>
+        </div>
+        <div class="staticbottom-well">
+          <h3><strong>USER CONTENT</strong></h3>
+					<h2>FeatsWithFriends is owned and operated by Ignition Pad, LLC. (“FeatsWithFriends” “WE,” “US,” OR “OUR”) is committed to protecting your       		          privacy.  Please read the following to learn what information we collect from you and how we use that information.  By accessing or using          FeatsWithFriends.com, you acknowledge that you have read, understand, and agree to the terms set forth in this Privacy Policy and in          FeatsWithFriends Terms of Use.  If you do not agree to these terms, exit this page and do not access or use FeatsWithFriends.com.
+  			  </h2>
+					<br>
+          <h3><strong>AGES</strong></h3>
+          <h2>You must be 13 years of age or older to use FeatsWithFriends.  If we obtain actual knowledge that a user is under 13, we will take steps          to remove that user’s personal information from our database.  By using FeatsWithFriends, you are representing that you are at least 18   	          years old, or that you are at least 13 years old and have a parent’s or guardian’s permission to use FeatsWithFriends.
+					</h2>
+					<br>
+          <h3><strong>INFORMATION COLLECTED BY FEATSWITHFRIENDS</strong></h3>
+					<h2>Personally Identifiable Information is information that identifies a specific user.  When you engage is certain activities on 					          FeatsWithFriends, such as creating an account or registering with us, we may ask you for certain information, including, but not limited to          your name, email address, phone number, date of birth and sex.  If you don’t provide the mandatory information requested by FeatsWithFriends           	          to create a User Account, you will not be able to use FeatsWithFriends.
+					<br>
+					<br>
+          Non-Personally Identifiable Information is information that does not identify a specific user.  This type of information may include thinks     	    like the Uniform Resource Locator (“URL”) of the website you visited before coming to our site, the URL you visit after leaving our site,  	          the type of web browser you are using when you access our site and your Internet Protocol (“IP”) address.  We and/or Third Party Service 	   	      Providers may automatically collect this information when you visit our site through electronic tools including, but not limited to Cookies.          <br>
+					<br>
+          Information provided by social network platforms.  If you access our site through a social network platform, including, but not limited to          Facebook.  We will collect and store the information explicitly allowed by the respective social network’s Terms of Service.
+          <br>
+					<br>
+          FeatsWithFriends is committed to your privacy and will not sell your name, address, phone number and/or email address with Third Party          Service Providers.  However, in order to improve our services and the services provided from our Business Partners, FeatsWithFriends, at its          discretion, may share your Personally Identifiable Information with our Partner Businesses including your email address, age, sex and/or zip          code.
+					<br>
+          <br>    
+          FeatsWithFriends may share your information with select Authorized Third Party Service Providers.  Third Party Service Providers may be used          to fulfill orders, deliver emails, administer contests or sweepstakes, remove repetitive information on customer lists, analyze data,          provide marketing assistance, provide search results and links, process credit card payments, operate the Website, troubleshoot, and provide          customer service.  We encourage Third Party Service Providers to adopt and post privacy policies. However, the use of your Personally          Identifiable Information by such parties is governed by the privacy policies of such parties and is not subject to our control.
+					<br>
+          <br>
+          We may share your information in a Business Transfer. As with any other business, we could merge with, or be acquired by another company. If          this occurs, the successor company would acquire the information we maintain, including Personally Identifiable Information.
+					<br>
+          <br> 
+          We may share your information for our Protection and the Protection of Others. We reserve the right to disclose your personally identifiable          information as required by law and when we believe that disclosure is necessary to protect our rights and/or comply with a judicial          proceeding, court order, or legal process served on our Website; enforce or apply this Privacy Policy, our Website Terms of Use or other          agreements; or protect the rights, property or safety of the Website, its Users or others.
+					</h2>
+					<br>
+          <h3><strong>YOUR CHOICES REGARDING YOUR PERSONAL INFORMATION</strong></h3>
+          <h2>You have a right at any time to stop receiving promotional communications from us.  You may indicate a preference regarding receiving          promotional communications from us and will have the opportunity to "opt-out" by following the unsubscribe instructions provided in the          promotional e-mail you receive or by contacting us directly at hello@featswithfriends.com.
+					<br>
+          <br>
+          Despite your indicated promotional communications preferences, FeatsWithFriends may send you administrative emails regarding          FeatsWithFriends, including, for example, administrative and transactional confirmations, and notices of updates to our Privacy Policy if we          choose to provide such notices to you in this manner.
+					<br>
+          <br>
+          You may close your account with FeatsWithFriends at any time.
+          </h2>
+					<br>
+          <h3><strong>THIRD PARTY WEBSITES AND LINKS</strong></h3>
+					<h2>FeatsWithFriends may contain links to other third party websites.  We are not responsible for the privacy practices or the content of          such websites. The ability to access information of third-parties from FeatsWithFriends, or links to other websites or locations, is for          your convenience and does not signify our endorsement of such third-parties, their products, their services, other websites, locations or          their content.</h2>
+					<br>
+          <h3><strong>SECURITY</strong</h3>
+					<h2>FeatsWithFriends uses several industry standard technologies to protect personal information entered in FeatsWithFriends.com.  Even          though we have taken several steps to protect your personal information, FeatsWithFriends cannot fully eliminate security risks associated          with personal information and cannot guarantee the complete protection of your account from unauthorized access.
+					</h2>
+					<br>
+          <h3><strong>FEEDBACK</strong></h3>
+          <h2>Feedback submitted to FeatsWithFriends becomes the property of FeatsWithFriends.  We will treat the personal information contained in          such feedback in accordance with this Privacy Policy. FeatsWithFriends may use your feedback for marketing purposes or to modify our          services at anytime without compensating you. FeatsWithFriends may share your feedback pertaining to our Business Partners to improve their          services and/or promotions offered through FeatsWithFriends at any time without compensating you. 
+					<br>
+          <br>   
+          FeatsWithFriends may revise this Privacy Policy at any time.  If we make any substantial changes we will post an alert on this page. If you          object to these changes, you must stop using FeatsWithFriends.  Continued use of FeatsWithFriends following the notice of any changes shall          indicate your acknowledgement and acceptance of the changes.
+          </h2>
         </div>
       </div>
     </div>
+  </div>
+</div>
 
 
 	
