--- a/app/views/feats/new.html.erb
+++ b/app/views/feats/new.html.erb
@@ -2,7 +2,7 @@
   <div class="background-unit">
     <div class="container">
 	    <div class="row-fluid">
-        <div class="span4">
+        <div class="span5">
 		      <div class="craig-unit">
 					  <h2>
 						  <i class="icon-map-marker"></i>
@@ -13,7 +13,7 @@
 						</h2>  
 					</div>
 					<div class="craig-unit">
-			      <h2><strong>Feat name and description/rules.</strong></h2>
+			      <h2><strong>Feat Name and Feat Description/Rules</strong></h2>
 						<center><div class="hr1"></div></center>
             <%= form_for @feat do |f| %>
             <%= render 'shared/error_messages', target: @feat %>
@@ -48,7 +48,7 @@
 			  </div>
      
 		 
-        <div class="span8">
+        <div class="span7">
 	        <div class="map-well"> 
 	          <div id="map_canvas"></div>
           </div>
