--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,20 +9,17 @@
 .statictop-well {
   min-height: 0px;
   padding: 20px 25px 20px 25px;
-  margin-top: 30px;
-  margin-left: 10px;
-  margin-right: 10px;
   background-color: #fff;
   border-bottom: 1px solid #E6E6E6;
   border-top: 1px solid #CCC;
   border-left: 1px solid #CCC;
   border-right: 1px solid #CCC;
-  -webkit-border-top-left-radius: 6px;
-  -moz-border-top-left-radius: 6px;
-  border-top-left-radius: 6px;
-  -webkit-border-top-right-radius: 6px;
-  -moz-border-top-right-radius: 6px;
-  border-top-right-radius: 6px;
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-top-left-radius: 4px;
+  border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+  -moz-border-top-right-radius: 4px;
+  border-top-right-radius: 4px;
   -webkit-box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);  	
@@ -30,6 +27,60 @@
 
 .statictop-well h2 {
   font-size: 30px;
+  line-height: 1;
+  color: #333;
+  font-weight: 200;
+}
+
+.pull-right {
+  float: right;
+}
+
+.pull-left {
+  float: left;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+
+.usertop-well {
+  min-height: 0px;
+  padding: 15px 25px 15px 25px;
+  background-color: #fff;
+  border-bottom: 1px solid #E6E6E6;
+  border-top: 1px solid #CCC;
+  border-left: 1px solid #CCC;
+  border-right: 1px solid #CCC;
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-top-left-radius: 4px;
+  border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+  -moz-border-top-right-radius: 4px;
+  border-top-right-radius: 4px;
+  -webkit-box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);  	
+}
+
+.usertop-well h2 {
+  font-size: 20px;
+  line-height: 1.2;
+  color: #333;
+  font-weight: 200;
+}
+
+.usertop-well h3 {
+  font-size: 14px;
   line-height: 1.2;
   color: #333;
   font-weight: 200;
@@ -56,42 +107,41 @@
 }
 
 
-
 .staticbottom-well {
   min-height:10px;
   min-width:  10px;
-  padding: 15px 25px 15px 25px;
+  padding: 25px 25px 25px 25px;
   margin-bottom: 30px;
-  margin-right: 10px;
-  margin-left: 10px;
   background-color: #FFF;
   #border-top: 1px solid #E6E6E6;
   border-bottom: 1px solid #CCC;
   border-left: 1px solid #CCC;
   border-right: 1px solid #CCC;
-  -webkit-border-bottom-left-radius: 6px;
-  -moz-border-bottom-left-radius: 6px;
-  border-bottom-left-radius: 6px;
-  -webkit-border-bottom-right-radius: 6px;
-  -moz-border-bottom-right-radius: 6px;
-  border-bottom-right-radius: 6px;
+  -webkit-border-bottom-left-radius: 4px;
+  -moz-border-bottom-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  -moz-border-bottom-right-radius: 4px;
+  border-bottom-right-radius: 4px;
   -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px 0px 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px 0px 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px 0px 1px 1px rgba(0, 0, 0, 0.05);
 }
 
-.staticbottom-well h2 {
-  font-size: 15px;
-  line-height: 1.3;
-  color: #333;
+.staticbottom-well h1 {
+  font-size: 12px;
+	line-height: 1.9;
+  letter-spacing: 0px;
   font-weight: 300;
+  color: #333;
 }
 
-.staticbottom-well h3 {
+.staticbottom-well h2 {
   font-size: 14px;
   line-height: 1.3;
+  letter-spacing: 0px;
+  font-weight: 300;
   color: #333;
-  font-weight: 200;
 }
 
 .pull-right {
@@ -157,38 +207,11 @@
 }
 
 
-
-.roundedwhite-well {
+.grey-well {
   min-height:10px;
-  min-width:  10px;
-  padding: 30px 25px 32px 25px;
-  margin-bottom: 30px;
-  margin-right: 10px;
-  margin-left: 10px;
-  background-color: #FFF;
-  border-top: 1px solid #CCC;
-  border-bottom: 1px solid #CCC;
-  border-left: 1px solid #CCC;
-  border-right: 1px solid #CCC;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
-}
-.roundedwhite-well h1 {
-  font-size: 18px;
-  line-height: 1.3;
-  color: #333;
-  font-weight: 500;
-}
-
-.roundedwhite-well h2 {
-  font-size: 15px;
-  line-height: 1.3;
-  color: #333;
-  font-weight: 400;
+  min-width: 10px;
+  padding: 25px 25px 25px 25px;
+  background-color: #F6F6F6;
 }
 
 .pull-right {
@@ -365,7 +388,7 @@
 }
 
 .hr1 {
-  margin: 14px 0px 14px 0px;
+  margin: 1px 0px 10px 0px;
   border: 0;
   border: 1px solid #ededed;
   border-bottom: 1px solid #ffffff;
@@ -481,6 +504,8 @@ alert {
 	-webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
+	margin-left:-20px;
+	margin-right:-20px;
 }
 
 .alert .close {
@@ -491,6 +516,8 @@ alert {
 	-webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
+	margin-left:-20px;
+	margin-right:-20px;
 }
 
 .alert-success {
@@ -501,6 +528,8 @@ alert {
 	-webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
+	margin-left:-20px;
+	margin-right:-20px;
 }
 
 .alert-danger,
@@ -512,6 +541,8 @@ alert {
 	-webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
+	margin-left:-20px;
+	margin-right:-20px;
 }
 
 .alert-info {
@@ -522,6 +553,8 @@ alert {
 	-webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
+	margin-left:-20px;
+	margin-right:-20px;
 }
 
 .alert-block {
@@ -531,6 +564,8 @@ alert {
 	-webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
+	margin-left:-20px;
+	margin-right:-20px;
 }
 
 .alert-block > p,
