--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -3,18 +3,18 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
-			  <div class="craig-unit">
+				<div class="statictop-well"
 				  <h2>
-				    <i class="icon-map-marker"></i>
 				    <strong><%= @location.name %></strong>
 				    <br>
 				    <%= @location.address %>
 					</h2>
-				  <div class="hr1"></div>
+				</div>
+				<div class="staticbottom-well">
 					<div class="row-fluid">
 					  <div class="span7">
 						  <h2>
-							  Existing Feats<br>
+							  <strong>Existing Feats</strong><br>
 								<div class="hr3"></div>
 					      <% unless @feats.empty? %>
 						      <% @feats.each do |f| %>
@@ -30,7 +30,6 @@
 							</h2>
 		  	    </div>
 			      <div class="span5">
-						<br>
 	            <div id="map_canvas"></div>
 							<br>
 							<br>
